# js-ast-manipulator

./: .gitignore  README.md  cabal.config  jam.cabal  parsejs.cabal
resources/ast/: empty_program.json  functions.json  medium_class.json  objects.json  small_object.json
resources/javascript/: functions.js  medium_class.js  objects.js  small_object.js
scripts/: chain.js
src/: Main.hs
src/Jam/: Decoders.hs  Types.hs
src/fish/: expression.hs
src/parsejs/: types.hs
test/: main-test.hs  test.hs
test/Jam/: DecoderTests.hs
