name:                jam
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Jack Palfrey
maintainer:          jack.palfrey@thomsonreuters.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable jam
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9,
                       aeson,
                       text,
                       bytestring
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

Test-Suite test-jam
  type:       exitcode-stdio-1.0
  main-is:    main-test.hs
  build-depends: base,
                 tasty,
                 aeson,
                 text,
                 bytestring,
                 tasty-hunit
  hs-source-dirs:      src, test
  ghc-options:         -Wall
  default-language:    Haskell2010
